src/test/ui/regions/regions-proc-bound-capture.stderr
error[E0759]: `x` has an anonymous lifetime `'_` but it needs to satisfy a `'static` lifetime requirement
  --> $DIR/regions-proc-bound-capture.rs:9:14
   |
LL | fn static_proc(x: &isize) -> Box<dyn FnMut() -> (isize) + 'static> {
   |                   ------ this data with an anonymous lifetime `'_`...
LL |     // This is illegal, because the region bound on `proc` is 'static.
LL |     Box::new(move || { *x })
   |              ^^^^^^^^^^^^^^ ...is used and required to live as long as `'static` here
   |
note: `'static` lifetime requirement introduced by the return type
  --> $DIR/regions-proc-bound-capture.rs:7:59
   |
LL | fn static_proc(x: &isize) -> Box<dyn FnMut() -> (isize) + 'static> {
   |                                                           ^^^^^^^ `'static` requirement introduced here
LL |     // This is illegal, because the region bound on `proc` is 'static.
LL |     Box::new(move || { *x })
   |     ------------------------ because of this returned expression
help: consider changing the trait object's explicit `'static` bound to the lifetime of argument `x`
   |
LL | fn static_proc(x: &isize) -> Box<dyn FnMut() -> (isize) + '_> {
   |                                                           ~~
help: alternatively, add an explicit `'static` bound to this reference
   |
LL | fn static_proc(x: &'static isize) -> Box<dyn FnMut() -> (isize) + 'static> {
   |                   ~~~~~~~~~~~~~~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0759`.
